[tool.poetry]
name = "default-ds-repo"
version = "0.1.0"
description = "データ分析用"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
mlxtend = "^0.23.0"
plotly = "^5.18.0"
lightgbm = "^4.1.0"
xgboost = "^2.0.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
shap = "^0.43.0"
optuna = "^3.4.0"
jupyterlab = "^4.0.9"
dalex = "^1.6.0"
fastparquet = "^2023.10.1"
pyarrow = "^14.0.1"
polars = "^0.19.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
